# ionChannel

./: .gitignore  ARCHITECTURE.md  AUTONOMOUS_PROVISIONING.md  AUTO_DEPLOY.sh  BENCHSCALE_INTEGRATION.md  CAPABILITY_BASED_VM_DISCOVERY.md  CAPABILITY_DISCOVERY.md  CHANGELOG.md  COMPLETE_MVP_TEST.sh  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEMO_GUIDE.md  DEMO_READINESS.md  DEPLOYMENT_REPORT.md  DOCS_CLEANUP_COMPLETE.md  DOCUMENTATION_INDEX.md  E2E_COMPLETE.md  EVOLUTION_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_COMPLETE.md  LICENSE.md  MISSION_COMPLETE.md  MVP_TEST_RESULTS.md  Makefile  NEXT_STEPS.md  PROGRESS.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  READY.md  READY_FOR_DEMO.md  READY_TO_PUSH.md  ROADMAP.md  RUN_DEMO.sh  SCREEN_CAPTURE_PIPEWIRE.md  STATUS.md  TESTING_PLAN_POPOS_WAYLAND.md  TEST_POPOS_WAYLAND.sh  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: ci.yml
archived/old_docs/: AUDIT_REPORT.md  BENCHSCALE_COMPLETE.md  BENCHSCALE_INTEGRATION_STATUS.md  CHANGELOG.md  COMPREHENSIVE_REVIEW_REPORT.md  CONTRIBUTING.md  DOCS_UPDATE_SUMMARY.md  FINAL_STATUS.md  FORK_AND_TEST_STRATEGY.md  IMPROVEMENTS.md  INTEGRATION_PROGRESS.md  PROGRESS.md  READY_TO_TEST.md  ROADMAP.md  SESSION_SUMMARY.md  SIMPLE_USER_GUIDE.md  STATUS.md  VM_TESTING_GUIDE.md
archived/old_scripts/: agent-guided-deploy.sh  deploy-forks.sh  fork-setup.sh  provision-test-vm.sh  run-standalone-portal.sh  smart-vm-discover.sh  test-on-cosmic.sh  vm-setup-popos.sh
benches/: core_operations.rs  performance.rs
crates/ion-backend-cosmic/: Cargo.toml
crates/ion-backend-cosmic/src/: dbus.rs  input.rs  lib.rs  provider.rs  tests.rs
crates/ion-backend-wayland/: Cargo.toml
crates/ion-backend-wayland/src/: capture.rs  connection.rs  input.rs  lib.rs  provider.rs
crates/ion-backend-wayland/src/protocols/: mod.rs  virtual_keyboard.rs  virtual_pointer.rs
crates/ion-compositor/: Cargo.toml
crates/ion-compositor/src/: capabilities.rs  compat.rs  dbus_service.rs  eis_backend.rs  lib.rs  rate_limiter.rs  virtual_input.rs
crates/ion-compositor/src/capture/: cpu.rs  dmabuf.rs  frame.rs  mod.rs  pipewire.rs  shm.rs  tier.rs
crates/ion-compositor/tests/: rate_limiting.rs
crates/ion-core/: Cargo.toml
crates/ion-core/src/: backend.rs  device.rs  discovery.rs  error.rs  event.rs  lib.rs  mode.rs  session.rs
crates/ion-core/tests/: security.rs  session_lifecycle.rs
crates/ion-deploy/: Cargo.toml  README.md
crates/ion-deploy/src/: autonomous.rs  cloud_init.rs  config.rs  deploy.rs  discovery.rs  lib.rs  main.rs  ssh.rs  ssh_keys.rs
crates/ion-deploy/tests/: integration_test.rs
crates/ion-portal/: Cargo.toml
crates/ion-portal-service/: Cargo.toml
crates/ion-portal-service/src/: main.rs
crates/ion-portal/src/: consent.rs  core.rs  lib.rs  portal.rs  session_manager.rs
crates/ion-portal/tests/: dbus_integration.rs
crates/ion-test-substrate/: Cargo.toml
crates/ion-test-substrate/src/: harness.rs  lib.rs  mock_bus.rs  mock_compositor.rs  validator.rs
crates/ion-test-substrate/tests/: chaos_tests.rs  e2e_demonstration.rs  security_tests.rs
crates/ion-traits/: Cargo.toml
crates/ion-traits/src/: capture.rs  error.rs  input.rs  lib.rs  platform.rs  service.rs
crates/ion-validation/: Cargo.toml
crates/ion-validation/examples/: autonomous_provision.rs  autonomous_rustdesk_id.rs  create_working_vm.rs  discover_and_provision.rs  full_e2e_demo.rs  get_rustdesk_id.rs  provision_and_connect.rs
crates/ion-validation/src/: capabilities.rs  errors.rs  events.rs  lib.rs  mcp.rs  orchestrator.rs
crates/ion-validation/src/impls/: ionchannel_deployer.rs  libvirt_provider.rs  libvirt_provisioner.rs  mod.rs  rustdesk_provider.rs
crates/ion-validation/src/providers/: backend_discovery.rs  desktop.rs  mod.rs  portal.rs  vm.rs
crates/ion-validation/tests/: e2e_test.rs  integration_test.rs
crates/portal-test-client/: Cargo.toml
crates/portal-test-client/src/: main.rs
docs/: AI_FIRST_ARCHITECTURE.md  AI_FIRST_COMPLETE.md  BENCHSCALE_INTEGRATION.md  EVOLUTION.md  INDEX.md  IPC_ALTERNATIVES.md  QUICK_START_VALIDATION.md  SONGBIRD_INTEGRATION.md  TESTING.md  TESTING_PLAN.md  VALIDATION_STRATEGY.md
docs/reports/: DEMONSTRATION_READY.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS_COMPLETE.md  IMPLEMENTATION_COMPLETE.md
docs/upstream-prs/: COMPOSITOR_PR.md  COSMIC_COMP_PR.md  COSMIC_ISSUE_DRAFT.md  INTEGRATION_GUIDE.md  PORTAL_COSMIC_PR.md  PORTAL_PR.md  SYSTEM76_MESSAGE.md  remote_desktop.rs.draft
examples/: full_stack_demo.rs  get_rustdesk_id.rs  smithay_integration.rs
scripts/: setup-cosmic-vm.sh  setup-upstream.sh
specs/: 00_MASTER_OVERVIEW.md  01_PORTAL_REMOTE_DESKTOP.md  02_COMPOSITOR_INPUT.md  03_RUSTDESK_INTEGRATION.md  04_PRELOGIN_RDP.md  05_ECOSYSTEM_INTEGRATION.md  06_PLATFORM_AGNOSTICISM.md
src/: lib.rs
tests/: README.md  benchscale_integration.rs  helpers.rs  validation.rs
tests/integration/: mod.rs  modern_patterns.rs  security.rs  session_lifecycle.rs
topologies/: ionChannel-rustdesk-test.yaml
