[package]
name = "ion-backend-cosmic"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
description = "COSMIC compositor backend for ionChannel"
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal
ion-core.workspace = true

# Async
async-trait = "0.1"
tokio = { workspace = true, features = ["sync", "rt"] }

# D-Bus for cosmic-comp communication
zbus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true

