[package]
name = "ion-backend-wayland"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
description = "Generic Wayland backend for ionChannel (works with any Wayland compositor)"
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal
ion-core.workspace = true

# Async
async-trait = "0.1"
tokio = { workspace = true, features = ["sync", "rt"] }

# Wayland protocols
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client", "unstable"], optional = true }
wayland-protocols-wlr = { version = "0.2", features = ["client"], optional = true }

# EIS (Emulated Input System) for input injection - future
# libei = { version = "1.0", optional = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[features]
default = []
wayland = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr"]
# eis = ["dep:libei"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true

