[package]
name = "ion-backend-wayland"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
description = "Generic Wayland backend for ionChannel (works with any Wayland compositor)"
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal
ion-core.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
async-trait = "0.1"

# Error handling
thiserror.workspace = true
anyhow = "1.0"

# Logging
tracing.workspace = true

# Wayland protocols (all features enabled by default now)
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
