[package]
name = "ion-compositor"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"  # System76 exception in LICENSE.md
description = "Compositor-side input injection for COSMIC remote desktop"
authors.workspace = true
repository.workspace = true

[[bin]]
name = "capability-check"
path = "src/bin/capability-check.rs"

[dependencies]
# Internal
ion-core.workspace = true
ion-traits.workspace = true

# Async trait support
async-trait = "0.1"

# D-Bus
zbus.workspace = true
zvariant.workspace = true

# Input injection (libei protocol - pure Rust)
# NOTE: reis will be used by cosmic-comp, not this crate directly
# The portal returns an EIS fd, clients use reis/libei to send input
# reis = { version = "0.5", features = ["tokio"] }

# Async
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "time", "net", "macros"] }
futures.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "time"] }

[lints]
workspace = true

