[package]
name = "ion-deploy"
version = "0.1.0"
edition = "2021"
authors = ["ionChannel Team"]
license = "MIT OR Apache-2.0"
description = "Deployment and VM discovery tool for ionChannel"
repository = "https://github.com/pop-os/ionChannel"

[[bin]]
name = "ion-deploy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "color", "cargo"] }
console = "0.15"
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Network discovery
mdns-sd = "0.11"
surge-ping = "0.8"
trust-dns-resolver = "0.23"

# SSH/Remote execution
russh = "0.44"
russh-keys = "0.44"
shell-escape = "0.1"

# System
hostname = "0.4"
home = "0.5"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.12"

[features]
default = []
# Future: libvirt integration
libvirt = []

