[package]
name = "ion-portal"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"  # System76 exception in LICENSE.md
description = "RemoteDesktop portal implementation for COSMIC"
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal
ion-core.workspace = true

# D-Bus / Portal
zbus.workspace = true
zvariant.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "rt"] }
futures.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true

[lints]
workspace = true

