[package]
name = "ion-validation"
version = "0.1.0"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "AI-first validation framework for ionChannel remote desktop testing"
license = "AGPL-3.0-or-later WITH System76-exception"

[features]
default = []
libvirt = ["benchscale/libvirt"]
mcp = ["dep:serde_json"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# Utilities
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
tokio-stream = { version = "0.1", features = ["sync"] }

# Testing infrastructure
benchscale = { path = "../../../benchScale", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.8"
pretty_assertions = "1.4"
